--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 cmake
-dlib
+dlib~=19.22.0
 face-recognition
 Pillow
-opencv-python
-cvlib
+opencv-python~=4.5.2.54
+cvlib~=0.2.6
 tensorflow
+colorama~=0.4.4
